syntax = "proto3";

package app;


enum Gender {
    GENDER_NONE = 0;
    GENDER_MALE = 1;
    GENDER_FEMALE = 2;
    GENDER_MISC = 3;
}
